--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         tools:targetApi="31">
         <activity
             android:name=".DetailMovieActivity"
+            android:label="@string/detailmovie"
             android:exported="false" />
         <activity
             android:name=".DetailNovelActivity"
+            android:label="@string/detailnovel"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
